Did some cleaning up:     - removed the method for the wrong way to quench     - cleaned up the method compute_p_mf_p_l, but now I need to fix it.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -668,7 +668,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Synchronizer instance at 0x104170b00>"
+       "<__main__.Synchronizer instance at 0x104c741b8>"
       ]
      },
      "execution_count": 13,
@@ -713,7 +713,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Agent instance at 0x104ca1290>"
+       "<__main__.Agent instance at 0x104c7c200>"
       ]
      },
      "execution_count": 14,
@@ -754,21 +754,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "L_l_q_dot() takes exactly 4 arguments (1 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-f521942f07ba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# forgot to pass in 'u_s' as a keyword argument\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropagate_dynamics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyAgent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# forgot to pass in 'u_s' as a keyword argument\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/sliding_window.py\u001b[0m in \u001b[0;36mpropagate_dynamics\u001b[0;34m(sliding_window_instance)\u001b[0m\n\u001b[1;32m    148\u001b[0m         \u001b[0mqpu_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqpu_vec_i\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# only need the last value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m         \u001b[0;31m# Since control, u has changed, the manifold has changed and we must update p_MF and p_l using the same q and q-dot values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 150\u001b[0;31m         \u001b[0mqpu_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_p_mf_p_l\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/sliding_window.py\u001b[0m in \u001b[0;36mcompute_p_mf_p_l\u001b[0;34m(qpu_vec, sliding_window_instance)\u001b[0m\n\u001b[1;32m    247\u001b[0m     '''\n\u001b[1;32m    248\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 249\u001b[0;31m     \u001b[0mp_l\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mL_l_q_dot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    250\u001b[0m     \u001b[0mp_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mL_l_q_dot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    251\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mqpu_vec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: L_l_q_dot() takes exactly 4 arguments (1 given)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# forgot to pass in 'u_s' as a keyword argument\n",
     "qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us = propagate_dynamics(myAgent)\n",
@@ -789,11 +775,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "make into a unit test!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print 'make into a unit test!!!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0.,  0.,  0., -2.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([-1.]),\n",
+       " [array([0.])],\n",
+       " [array([0.])],\n",
+       " [array([0.])],\n",
+       " [array([-1.])])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  0.  0. -2.] [0.] [0.] [0.] [-1.] [array([0.])] [array([0.])] [array([0.])] [array([-1.])]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'qpu_vec2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-26b28b194d7d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mqpu_vec2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'qpu_vec2' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us\n",
     "\n",
