Currently I'm trying to figure out why inside the method "sliding_window" we are getting q_s_dot from the blackboard instead of recomputing it? It should be recomputed every time the sliding window is run for a particular agent.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -454,7 +454,7 @@
     "            agent.sync = self\n",
     "    \n",
     "    def synchronize(self):\n",
-    "        # run synchronization\n",
+    "        # run synchronization by visiting each agent and running propagation\n",
     "        for agent in self.agents:\n",
     "            '''     \n",
     "            1) run synchronized propagation - I think we only need one Agent instead of SlidingWindow now\n",
@@ -475,7 +475,7 @@
     "        for agent in self.agents:\n",
     "            # Evaluate L_q_dot for each of the agents\n",
     "            # Remember L_l_q_dot only takes in the local variables.  So, need to know the indices in q_mf which correspond to \n",
-    "            #...the states pertaining to this agent \n",
+    "            #...the states pertaining to this agent\n",
     "#             q_l = # subset of q_mf\n",
     "#             q_l_dot = # subset of q_mf_dot\n",
     "#             u_s = # subset of u_mf\n",
@@ -495,6 +495,55 @@
     "        \n",
     "        return H_mf\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myAgent.qpu_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'p_l': {'1': 0, '2': 3},\n",
+       " 'p_mf': {'1': 0, '2': 1},\n",
+       " 'q_s': {'1': 0, '2': 2},\n",
+       " 'q_s_dot': {'1': 0, '2': 1},\n",
+       " 'u_s': {'1': 0}}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# bb.q_p_u_dict['p_l'].keys()\n",
+    "bb.q_p_u_dict"
    ]
   },
   {
@@ -792,7 +841,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -911,7 +960,13 @@
    "source": [
     "def sliding_window(sliding_window_instance):\n",
     "    ''' \n",
+    "    This method runs the propagation for a single agent.  Corresponding to the flow chart it runs:\n",
+    "        - construct quenched mean field for Hamiltonian agent i\n",
+    "        - Setup initial conditions for L_MF and p_MF\n",
+    "        - Construct agent synchronized Hamiltonian and partial derivatives\n",
+    "    \n",
     "    Inputs:\n",
+    "    The only input is sliding_window_instance, but we use the following attributes of the sliding_window_instance:\n",
     "        t_0 (int): Initial time to start propagating dynamics\n",
     "        T (int): End time of propagating dynamics\n",
     "        q_0 (np.array): initial values of state vector\n",
@@ -923,7 +978,7 @@
     "    Outputs:\n",
     "        q_bars, p_bars, u_bars (list of np.arrays): implemented state/costate/control values for entire propagator.\n",
     "    '''\n",
-    "    sliding_window_instance.compute_gamma()\n",
+    "#     sliding_window_instance.compute_gamma()\n",
     "#     t_0, T, K, q_0, p_0, u_0, state_dim, Gamma, t_terminal = sliding_window_instance.t_0, sliding_window_instance.T, sliding_window_instance.K, sliding_window_instance.q_s_0, sliding_window_instance.p_mf_0, sliding_window_instance.u_s_0, sliding_window_instance.state_dim, sliding_window_instance.Gamma, sliding_window_instance.t_terminal\n",
     "    t_0, T, K, state_dim,t_terminal = sliding_window_instance.t_0, sliding_window_instance.T, sliding_window_instance.K,  sliding_window_instance.state_dim, sliding_window_instance.t_terminal\n",
     "    q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = [], [], [], []\n",
@@ -940,7 +995,7 @@
     "    q_l_D_dot_0 = q_s_dot_0\n",
     "    q_l_D_0 = q_s_0\n",
     "    \n",
-    "    \n",
+    "\n",
     "    # set initial conditions using values from blackboard retrieved above\n",
     "    p_l_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0) # compute using Dirac compatibility\n",
     "    p_l_D_0 = sliding_window_instance.L_l_D_q_Dot(q_l_D_0, q_l_D_dot_0) # compute using Dirac compatibility\n",
@@ -948,7 +1003,7 @@
     "    # TODO: something seems wrong here.  This is computed identical to p_l_0, which seems very incorrect\n",
     "    # Setup initial conditions for\n",
     "    # construct L_mf\n",
-    "#     L_mf = \n",
+    "    #     L_mf = \n",
     "    p_mf_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0)\n",
     "    # figure out which state/costate variables are quenched..., \n",
     "    # ...and then overwrite the values returned by L_l_q_dot with the values from the blackboard\n",
