Discovered a few things about the code that need fixing:     - the blackboard entries in the dictionary should be called _mf, since they are actually ALL of the variables for all the states - not just the local ones.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -954,6 +954,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# write helper function to take in sliding window, and q_p_u_dict, and return the q_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -961,6 +972,7 @@
     "def sliding_window(sliding_window_instance):\n",
     "    ''' \n",
     "    This method runs the propagation for a single agent.  Corresponding to the flow chart it runs:\n",
+    "        - Read from blackboard to get the following observation measured at time t_0, and onwards\n",
     "        - construct quenched mean field for Hamiltonian agent i\n",
     "        - Setup initial conditions for L_MF and p_MF\n",
     "        - Construct agent synchronized Hamiltonian and partial derivatives\n",
@@ -978,23 +990,24 @@
     "    Outputs:\n",
     "        q_bars, p_bars, u_bars (list of np.arrays): implemented state/costate/control values for entire propagator.\n",
     "    '''\n",
+    "    \n",
     "#     sliding_window_instance.compute_gamma()\n",
-    "#     t_0, T, K, q_0, p_0, u_0, state_dim, Gamma, t_terminal = sliding_window_instance.t_0, sliding_window_instance.T, sliding_window_instance.K, sliding_window_instance.q_s_0, sliding_window_instance.p_mf_0, sliding_window_instance.u_s_0, sliding_window_instance.state_dim, sliding_window_instance.Gamma, sliding_window_instance.t_terminal\n",
     "    t_0, T, K, state_dim,t_terminal = sliding_window_instance.t_0, sliding_window_instance.T, sliding_window_instance.K,  sliding_window_instance.state_dim, sliding_window_instance.t_terminal\n",
     "    q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = [], [], [], []\n",
     "    t = t_0 # wall clock time\n",
     "    # qpu_vec = np.hstack([q_0, p_0, u_0])\n",
     "    \n",
-    "    # get initial values from blackboard:\n",
+    "    # Read from blackboard to get the following observation measured at time t_0\n",
     "    q_p_u_dict = sliding_window_instance.bb.q_p_u_dict\n",
     "    q_s_0 = q_p_u_dict['q_s'] # still need to pick out the individual states that we need.\n",
-    "    q_s_dot_0 = q_p_u_dict['q_s_dot'] # where to get this from?  blackboard\n",
-    "    u_s_0 = q_p_u_dict['u_s'] # If control is physical, then we should use the physical value here for initial condition\n",
+    "    q_s_dot_0 = q_p_u_dict['q_s_dot'] # still need to pick out the individual states that we need.\n",
+    "    u_s_0 = q_p_u_dict['u_s'] # still need to pick out the individual states that we need.\n",
+    "    \n",
+    "    # If control is physical, then we should use the physical value here for initial condition\n",
     "    # IF not, then we can use the average u, averaged over the previous window.  \n",
-    "    # For now, use the value from the end of the previous window.\n",
+    "    # For now, use the value from the blackboard\n",
     "    q_l_D_dot_0 = q_s_dot_0\n",
     "    q_l_D_0 = q_s_0\n",
-    "    \n",
     "\n",
     "    # set initial conditions using values from blackboard retrieved above\n",
     "    p_l_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0) # compute using Dirac compatibility\n",
