--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -999,12 +999,20 @@
     "    \n",
     "    # Read from blackboard to get the following observation measured at time t_0\n",
     "    q_p_u_dict = sliding_window_instance.bb.q_p_u_dict\n",
-    "    q_s_0 = q_p_u_dict['q_s'] # still need to pick out the individual states that we need.\n",
-    "    q_s_dot_0 = q_p_u_dict['q_s_dot'] # still need to pick out the individual states that we need.\n",
-    "    u_s_0 = q_p_u_dict['u_s'] # still need to pick out the individual states that we need.\n",
+    "    q_mf = q_p_u_dict['q_s'] # still need to pick out the individual states that we need.\n",
+    "    q_mf_dot = q_p_u_dict['q_s_dot'] # still need to pick out the individual states that we need.\n",
+    "    u_mf_0 = q_p_u_dict['u_s'] # still need to pick out the individual states that we need.\n",
+    "    \n",
+    "    # now pick out the individual states that we need to make q_s and q_s_dot\n",
+    "    qpu_vec = sliding_window_instance.qpu_vec\n",
+    "    state_dim = sliding_window_instance.state_dim\n",
+    "    control_dim = sliding_window_instance.control_dim\n",
+    "    q_s = qpu_vec[:state_dim]\n",
+    "    q_s_dot = qpu_vec[]  # okay now where to get q_s_dot\n",
+    "    u_s_0 = qpu_vec[3*state_dim:]\n",
     "    \n",
     "    # If control is physical, then we should use the physical value here for initial condition\n",
-    "    # IF not, then we can use the average u, averaged over the previous window.  \n",
+    "    # IF not, then we can use the average u, averaged over the previous window.\n",
     "    # For now, use the value from the blackboard\n",
     "    q_l_D_dot_0 = q_s_dot_0\n",
     "    q_l_D_0 = q_s_0\n",
