Need to figure out if we currently have a way to track state indices that pertain to a particular agent. In other words, is there an attribute for an agent which tells us which states pertain to that agent?

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -999,16 +999,17 @@
     "    \n",
     "    # Read from blackboard to get the following observation measured at time t_0\n",
     "    q_p_u_dict = sliding_window_instance.bb.q_p_u_dict\n",
-    "    q_mf = q_p_u_dict['q_s'] # still need to pick out the individual states that we need.\n",
-    "    q_mf_dot = q_p_u_dict['q_s_dot'] # still need to pick out the individual states that we need.\n",
-    "    u_mf_0 = q_p_u_dict['u_s'] # still need to pick out the individual states that we need.\n",
+    "    q_mf = q_p_u_dict['q_s'] \n",
+    "    q_mf_dot = q_p_u_dict['q_s_dot'] \n",
+    "    u_mf_0 = q_p_u_dict['u_s'] \n",
     "    \n",
     "    # now pick out the individual states that we need to make q_s and q_s_dot\n",
     "    qpu_vec = sliding_window_instance.qpu_vec\n",
     "    state_dim = sliding_window_instance.state_dim\n",
-    "    control_dim = sliding_window_instance.control_dim\n",
     "    q_s = qpu_vec[:state_dim]\n",
-    "    q_s_dot = qpu_vec[]  # okay now where to get q_s_dot\n",
+    "    q_s_dot =  # normally I understand that this would come from the sensors, ...\n",
+    "    # ...but for now get it from q_mf_dot from the blackboard, and just select if from the states that pertain to this agent\n",
+    "    q_s_dot = filter(lambda item: int(item[0]) in sliding_window_instance.state_indices, [item for item in q_mf_dot.items()])\n",
     "    u_s_0 = qpu_vec[3*state_dim:]\n",
     "    \n",
     "    # If control is physical, then we should use the physical value here for initial condition\n",
