--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -999,7 +999,7 @@
     "    \n",
     "    # Read from blackboard to get the following observation measured at time t_0\n",
     "    q_p_u_dict = sliding_window_instance.bb.q_p_u_dict\n",
-    "    q_mf = q_p_u_dict['q_s'] \n",
+    "    q_mf = q_p_u_dict['q_s']\n",
     "    q_mf_dot = q_p_u_dict['q_s_dot'] \n",
     "    u_mf_0 = q_p_u_dict['u_s'] \n",
     "    \n",
@@ -1007,9 +1007,10 @@
     "    qpu_vec = sliding_window_instance.qpu_vec\n",
     "    state_dim = sliding_window_instance.state_dim\n",
     "    q_s = qpu_vec[:state_dim]\n",
-    "    q_s_dot =  # normally I understand that this would come from the sensors, ...\n",
+    "    # a note on q_s_dot - normally I understand that this would come from the sensors, ...\n",
     "    # ...but for now get it from q_mf_dot from the blackboard, and just select if from the states that pertain to this agent\n",
-    "    q_s_dot = filter(lambda item: int(item[0]) in sliding_window_instance.state_indices, [item for item in q_mf_dot.items()])\n",
+    "    import pdb; pdb.set_trace()\n",
+    "    q_s_dot_0 = filter(lambda item: int(item[0]) in sliding_window_instance.state_indices, [item[1] for item in q_mf_dot.items()])\n",
     "    u_s_0 = qpu_vec[3*state_dim:]\n",
     "    \n",
     "    # If control is physical, then we should use the physical value here for initial condition\n",
