--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -131,9 +131,26 @@
     "    \n",
     "    def q_rhs_H_l_nou(self, q_s, p_l, lambda_l):\n",
     "        return np.array(p_l)\n",
+    "    \n",
+    "    # There should be one of these defined for each control variable\n",
+    "#     def H_l_u(self, q_s, p_l):\n",
+    "#         return 1\n",
     "\n",
-    "    def H_l_u(self, q_s, p_l):\n",
+    "    def H_l_u_1(self, q_s, p_s):\n",
     "        return 1\n",
+    "    \n",
+    "    def H_l_u_2(self, q_s, p_s):\n",
+    "        return 1\n",
+    "    \n",
+    "    def H_l(self, q_s, p_l, lambda_l, u_s):\n",
+    "        # used in \"Construct local Hamiltonian of agent i\"\n",
+    "        H_l = self.H_l_nou(q_s, p_l, lambda_l)\n",
+    "        H_l = H_l + self.H_l_u_1(q_s, p_s)*u_s[0]+ self.H_l_u_2(q_s, p_s)*u_s[1]\n",
+    "        return H_l\n",
+    "            \n",
+    "    def compute_lambdas(self, q_s, p_l, u_l):\n",
+    "        # not implemented yet\n",
+    "        return np.ones((1,self.state_dim))\n",
     "    \n",
     "    def p_rhs_H_l_u(self, q_s, p_l):\n",
     "        return np.array(p_l)\n",
@@ -321,6 +338,22 @@
     "\n",
     "    def H_l_u(self, q_s, p_l):\n",
     "        return 1\n",
+    "    \n",
+    "    def H_l(self, q_s, p_l, lambda_l, u_s):\n",
+    "        # used in \"Construct local Hamiltonian of agent i\"\n",
+    "        H_l = self.H_l_nou(q_s, p_l, lambda_l)\n",
+    "        H_l = H_l + self.H_l_u_1(q_s, p_s)*u_s[0]+ self.H_l_u_2(q_s, p_s)*u_s[1]\n",
+    "        return H_l\n",
+    "            \n",
+    "    def H_MF_u_1(self, q_mf, p_mf):\n",
+    "        return q_mf[0]*q_mf[1]\n",
+    "    \n",
+    "    def H_MF_u_2(self, q_mf, p_mf):\n",
+    "        return q_mf[1]\n",
+    "    \n",
+    "    def compute_lambdas(self, q_s, p_l, u_l):\n",
+    "        # not implemented yet\n",
+    "        return np.ones((1,self.state_dim))\n",
     "    \n",
     "    def p_rhs_H_l_u(self, q_s, p_l):\n",
     "        return np.array(p_l)\n",
@@ -878,55 +911,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "print 'make into a unit test!!!'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "q_l = np.array([1,2,4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "np.hstack([q_l,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'qpu_vec' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-26b28b194d7d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mqpu_vec2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'qpu_vec' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us\n",
     "\n",
@@ -1023,12 +1024,13 @@
     "    p_l_D_0 = sliding_window_instance.L_l_D_q_Dot(q_l_D_0, q_l_D_dot_0) # compute using Dirac compatibility\n",
     "    \n",
     "    # TODO: something seems wrong here.  This is computed identical to p_l_0, which seems very incorrect\n",
-    "    # Setup initial conditions for\n",
-    "    # construct L_mf\n",
-    "    #     L_mf = \n",
-    "    p_mf_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0)\n",
-    "    # figure out which state/costate variables are quenched..., \n",
-    "    # ...and then overwrite the values returned by L_l_q_dot with the values from the blackboard\n",
+    "    \n",
+    "    # Construct local Hamiltonian of agent i\n",
+    "    lambdas = compute_lambdas(self, q_s, p_l, u_l)\n",
+    "    H_l = sliding_window_instance.H_l(q_s, p_l, lambda_l, u_s)\n",
+    "    H_mf = sliding_window_instance.H_mf()\n",
+    "    L_mf = \n",
+    "    # p_mf_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0)\n",
     "    \n",
     "    # fill in qpu_vec with values from the blackboard, and then assign them to attribute sliding_window_instance\n",
     "    sliding_window_instance.qpu_vec = np.hstack([q_s_0, p_l_0, p_mf_0, u_s_0])\n",
